--- a/frontend-passwordmanager/app/views/login.pug
+++ b/frontend-passwordmanager/app/views/login.pug
@@ -3,7 +3,7 @@ extends template
 block content
   div#error-message
   form#login-form
-    h1 sign up for password manager on the CLOUD
+    h1 LOGIN
     input#username-login(type="text" name="username" placeholder="username")
     input#hash-login(type="text" name="hash" placeholder="hash")
     button(type="submit") submit
