--- a/frontend-passwordmanager/app/views/template.pug
+++ b/frontend-passwordmanager/app/views/template.pug
@@ -2,11 +2,10 @@ doctype html
 html
   head
     title= title || "password manager"
+    link(href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
-    a(href='/login') login
-    a(href='/register') register
     script(src='/js/main.min.js')
     if token
         script localStorage.token = "#{token}"
