update scheam to require and make username and password unique, add error handling for unique username on frontend

--- a/frontend-passwordmanager/app/views/createpassword.pug
+++ b/frontend-passwordmanager/app/views/createpassword.pug
@@ -8,5 +8,5 @@ block content
 
   form#create-password(data-appname=appname)
     input(type='text' name='username' placeholder="username")
-    input(type='text' name='hash' placeholder="password")
+    input(type='password' name='hash' placeholder="password")
     button(type='submit') submit
