--- a/frontend-passwordmanager/app/views/login.pug
+++ b/frontend-passwordmanager/app/views/login.pug
@@ -5,5 +5,5 @@ block content
   form#login-form
     h1 LOGIN
     input#username-login(type="text" name="username" placeholder="username")
-    input#hash-login(type="text" name="hash" placeholder="hash")
+    input#hash-login(type="password" name="hash" placeholder="hash")
     button(type="submit") submit
