--- a/frontend-passwordmanager/app/views/register.pug
+++ b/frontend-passwordmanager/app/views/register.pug
@@ -7,5 +7,5 @@ block content
   form#register-form
     h1 sign up for password manager on the CLOUD
     input#username(type="text" name="username" placeholder="username")
-    input#hash(type="text" name="hash" placeholder="hash")
+    input#hash(type="password" name="hash" placeholder="hash")
     button(type="submit") submit
