--- a/frontend-passwordmanager/app/views/createpassword.pug
+++ b/frontend-passwordmanager/app/views/createpassword.pug
@@ -1,12 +1,13 @@
 extends template
 
 block content
-  h2 create new password
-  p create a new password to store
+  div.logo
+    img.logo__svg(src='/imgs/logo-lock.svg' alt='lock logo')
+    p.danger#error-message
 
-  div#error-message
-
-  form#create-password(data-appname=appname)
-    input(type='text' name='username' placeholder="username")
-    input(type='password' name='hash' placeholder="password")
-    button(type='submit') submit
+  form.form#create-password(data-appname=appname)
+    label.form__label(for='username') username
+    input.form__input(type='text' name='username' placeholder="username")
+    label.form__label(for='hash') password
+    input.form__input(type='password' name='hash' placeholder="password")
+    button.button(type='submit') create account
