--- a/frontend-passwordmanager/app/views/deletepassword.pug
+++ b/frontend-passwordmanager/app/views/deletepassword.pug
@@ -1,10 +1,15 @@
 extends template
 
 block content
-  p insert the 'username' and 'password' to delete it. warning there will be no way to recover it.
-  div#error-message
+  div.logo
+    img.logo__svg(src='/imgs/logo-lock.svg' alt='lock logo')
+    p.danger insert the new 'username' and new 'password' to update it. warning there will be no way to recover it.
+    div.danger#error-message
 
-  form#delete-password(data-id=index, data-appName=appName)
-    input(type='text' name='username' placeholder='username...')
-    input(type='text' name='hash' placeholder='password...')
-    button(type="submit") submit
+  form.form#delete-password(data-id=index, data-appName=appName)
+    label.form__label(for='username') username
+    input.form__input(type='text' name='username' placeholder='username...')
+    label.form__label(for='hash') hash
+    input.form__input(type='text' name='hash' placeholder='password...')
+    button.button(type="submit") delete account
+
