--- a/frontend-passwordmanager/app/views/passwords.pug
+++ b/frontend-passwordmanager/app/views/passwords.pug
@@ -1,16 +1,30 @@
 extends template
 
 block content
-  a(href='/users/createpassword/' + appName) create password
-  h1 all your passwords for #{appName}
+  nav
+    ul.login-nav
+      li.login-nav__li
+        a.login-nav__link(href='/users/applications?token=' + token) Applications
+      li.login-nav__li
+        a.login-nav__link(href='/logout/' + token) LOG OUT
   #apps
-    each val, index in body
-      p username #{val.username}
-      p password #{val.password}
+    h3.title Here all your passwords for #{appName}
+    p.center
+      a.button(href='/users/createpassword/' + appName) create account
 
-      p
-        a(href='/users/deletepassword/' +appName +'/' +index + '?token=' + token) delete password
-      p
-        a(href='/users/updatepassword/' +appName +'/' +index + '?token=' + token) update password
-    else
-      a(href='/users/createpassword/' + appName) create a new password
+    div.cards
+      each val, index in body
+        div.card.card--left
+          p.label.label--left username
+          h4.title--left #{val.username}
+          p.label.label--left password
+          h4.title--left #{val.password}
+          div.card__config
+            p.card__delete
+              a(href='/users/deletepassword/' +appName +'/' +index + '?token=' + token)
+                img(src='/imgs/delete.svg')
+            p.card__update
+              a(href='/users/updatepassword/' +appName +'/' +index + '?token=' + token)
+                img(src='/imgs/wrench.svg')
+
+
