--- a/frontend-passwordmanager/app/stylesheets/module.styl
+++ b/frontend-passwordmanager/app/stylesheets/module.styl
@@ -26,3 +26,59 @@
   &__title
     font-size: 35px
     text-transform: capitalize
+
+
+.logo
+  text-align: center
+
+  &__svg
+    width: 355px
+
+
+.form
+  display: flex
+  flex-direction: column
+  width: 45%
+  margin: 0 auto
+
+  &__input
+    border: none
+    border-bottom: 1px solid #800080
+    outline: none
+    color: #6C6C6C
+    font-size: 15px
+
+.form__label, .label
+  color: #B3B3B3
+  text-transform: uppercase
+  font-weight: 500
+  font-size: 14px
+  margin: 25px 0
+
+.label--left, .title--left
+  padding-left: 20px;
+  margin: 15px 0;
+
+.button
+  background-color: #FFD600
+  border: none
+  cursor: pointer
+  padding: 20px 25px
+  text-transform: uppercase
+  border-radius: 33px
+  font-weight: bold
+  color: #800080
+  margin: 30px auto
+  outline: none
+  width: 60%
+  text-decoration: none
+
+.title
+  margin-bottom: 50px;
+  color: #A1A1A1
+  text-align: center;
+  font-weight: 500;
+
+
+.danger
+  color:#f00
