--- a/frontend-passwordmanager/app/views/updateapplication.pug
+++ b/frontend-passwordmanager/app/views/updateapplication.pug
@@ -1,9 +1,11 @@
 extends template
 
 block content
-  p insert the new application name.
+  div.logo
+    img.logo__svg(src='/imgs/logo-lock.svg' alt='lock logo')
   div#error-message
 
-  form#update-application(data-id=id)
-    input(type='text' name='changeName' placeholder='application name...')
-    button(type="submit") submit
+  form.form#update-application(data-id=id)
+    label.form__label(for='changeName') new application name
+    input.form__input(type='text' name='changeName' placeholder='application name...')
+    button.button(type="submit") update application name
