add responsive layout

--- a/frontend-passwordmanager/app/stylesheets/module.styl
+++ b/frontend-passwordmanager/app/stylesheets/module.styl
@@ -22,6 +22,7 @@
     padding: 8px 10px
     border-radius: 11px
     text-decoration: none
+    text-transform: uppercase
 
   &__title
     font-size: 35px
@@ -79,6 +80,55 @@
   text-align: center;
   font-weight: 500;
 
+.title__text
+  margin: 10px 0;
+
 
 .danger
   color:#f00
+
+@media screen and (max-width: 961px)
+  .about
+    padding: 10% 5%;
+
+  .cta, .nav
+    margin: 0 5%
+
+  .nav__cta
+    margin-left: 15px
+
+  .nav__links
+    padding: 0
+
+  .cta__title
+    font-size: 33px
+    margin-top: 20%
+
+  .cta__link
+    font-size: 25px
+    padding: 18px 20px
+
+  .cta__button
+    margin-top: 22%
+    text-align: center
+
+  .form
+    width: 70%
+    margin-top: 10%
+
+  .logo__svg
+    width: 200px
+
+  .button
+    margin-top: 35%
+    width: 100%
+    font-size: 20px
+
+  .login-nav
+    padding: 0;
+
+    &__li
+      margin: 0 30px
+
+  .card
+    width: 45%;
