--- a/frontend-passwordmanager/app/views/createapplication.pug
+++ b/frontend-passwordmanager/app/views/createapplication.pug
@@ -8,4 +8,4 @@ block content
   form.form#create-application
     label.form__label(for='username') application name
     input.form__input(type='text' name='newApplication' placeholder="application name")
-    button.button(type='submit') create new application
+    button.button(type='submit') create application
