--- a/frontend-passwordmanager/app/views/index.pug
+++ b/frontend-passwordmanager/app/views/index.pug
@@ -4,7 +4,9 @@ block content
   div.contain
     header
       nav.nav
-        p.nav__title password manager
+        div.nav__logo
+          img(src="/imgs/logo-lock.svg")
+          p.nav__title password manager
         ul.nav__links
           li.nav__link
             a.nav__cta(href="/login") login
