--- a/frontend-passwordmanager/app/views/passwords.pug
+++ b/frontend-passwordmanager/app/views/passwords.pug
@@ -8,7 +8,9 @@ block content
       li.login-nav__li
         a.login-nav__link(href='/logout/' + token) LOG OUT
   #apps
-    h3.title Here all your passwords for #{appName}
+    div.title
+      h3.title__text all your passwords for
+      h3.title__text #{appName}
     p.center
       a.button(href='/users/createpassword/' + appName) create account
 
