--- a/frontend-passwordmanager/app/stylesheets/layout.styl
+++ b/frontend-passwordmanager/app/stylesheets/layout.styl
@@ -13,6 +13,9 @@ $margin = 0 15%
   text-transform: uppercase
   font-weight: 500
 
+  &__logo
+    display: flex;
+
 .about
   background-color: #f4f9fd
   padding: 10% 15%
@@ -70,4 +73,4 @@ $margin = 0 15%
 
 .center
   text-align: center
-  margin: 50px 0;
+  margin: 50px 0
